packages/components/src/message/style.scss
$colorTypes: (
  "info": "text-blue",
  "warning": "text-orange",
  "success": "text-green",
  "error": "text-red",
);

$iconTypes: (
  "info": "i-mdi-information",
  "warning": "i-mdi-alert-circle",
  "success": "i-mdi-check-circle",
  "error": "i-mdi-close-circle",
);

.ld-message {
  box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
  transform: translate(-50%, 0);
  max-width: 50%;
  @apply bg-white top-20px left-50% px-3 py-2 rd-1 text-gray-5 flex items-center transition-all-300 fixed;

  .message-content {
    @apply flex-shrink-0 break-words;
  }

  .close-btn {
    @apply text-sm text-gray hover:text-dark ml-2 cursor-pointer transition-all-300;
  }

  .message-icon {
    @apply text-lg mr-2;
  }

  @each $type, $color in $iconTypes {
    &.is-#{$type} .message-icon {
      @apply #{$color};
    }
  }
  @each $type, $color in $colorTypes {
    &.is-#{$type} .message-icon {
      @apply #{$color};
    }
  }
}

.ld-message-fade-enter-from,
.ld-message-fade-leave-to {
  transform: translate(-50%, -100%);
  @apply opacity-0;
}

